# ConvictionMapper

./: .gitignore  CLAUDE.md  DOC-RECONCILIATION.md  IMPLEMENTATION-ROADMAP.md  README.md  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.github/workflows/: ci.yml
docs/: PORTFOLIO-DISPOSITION.md
docs/releases/: security-remediation-2026-06-20.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: beliefs.rs  connections.rs  evidence.rs  mod.rs  predictions.rs  settings.rs  updates.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_predictions.sql
src-tauri/src/models/: mod.rs
src/components/beliefs/: BeliefHistory.tsx  BeliefPanel.tsx  ConnectionSection.tsx  DeepAdd.tsx  EvidenceForm.tsx  EvidenceList.tsx  PredictionCard.tsx  PredictionForm.tsx  PredictionSection.tsx  QuickAdd.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/graph/: ContextMenu.tsx  DecayDemoBanner.tsx  GraphView.tsx  Minimap.tsx  RelationshipSelector.tsx  TimeTravelPanel.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/onboarding/: OnboardingWizard.tsx
src/components/predictions/: CalibrationChart.tsx  PredictionRow.tsx  (+2 more)
src/hooks/: use-force-graph.ts
src/lib/: calibration.test.ts  calibration.ts  decay.test.ts  decay.ts  graph-layout.ts  onboarding.ts  tauri-commands.ts
src/store/: belief-store.ts  settings-store.ts  ui-store.ts
src/types/: index.ts
src/views/: GraphViewPage.tsx  ListViewPage.tsx
(+6 files in other folders)
