[package]
name = "conviction-mapper"
version = "0.1.0"
description = "A local-first belief mapping app"
authors = ["you"]
edition = "2021"

[lib]
name = "conviction_mapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
log = "0.4"

